force-app/main/default/objects/Cycle_Day__c/Cycle_Day__c.object-meta.xml
<CustomObject>
    <label>Cycle Day</label>
    <nameField>
        <displayFormat>CD-{0000}</displayFormat>
        <label>Cycle Day Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cycle Days</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>