force-app/main/default/objects/Cycle_Day__c/fields/All_Other_Medications__c.field-meta.xml
<CustomField>
    <fullName>All_Other_Medications__c</fullName>
    <label>All Other Medications</label>
    <length>255</length>
    <type>Text</type>
</CustomField>