force-app/main/default/objects/Cycle_Day__c/fields/BHCG__c.field-meta.xml
<CustomField>
    <fullName>BHCG__c</fullName>
    <label>BHCG</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>