force-app/main/default/objects/Cycle_Day__c/fields/BHCG_Display__c.field-meta.xml
<CustomField>
    <fullName>BHCG_Display__c</fullName>
    <formula>IF(
    AND(
        ISBLANK(Book_BHCG__c),
        ISBLANK(BHCG__c)
    ),
    &apos;&apos;,
    IF(
        NOT(ISBLANK(LH__c)),
        IF(BHCG__c = 0, Book_BHCG__c, TEXT(BHCG__c)),
        Book_BHCG__c
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BHCG</label>
    <type>Text</type>
</CustomField>