force-app/main/default/objects/Cycle_Day__c/fields/Book_BHCG__c.field-meta.xml
<CustomField>
    <fullName>Book_BHCG__c</fullName>
    <label>Book BHCG</label>
    <length>2</length>
    <type>Text</type>
</CustomField>