force-app/main/default/objects/Cycle_Day__c/fields/Booked_E2__c.field-meta.xml
<CustomField>
    <fullName>Booked_E2__c</fullName>
    <label>Booked E2</label>
    <length>2</length>
    <type>Text</type>
</CustomField>