force-app/main/default/objects/Cycle_Day__c/fields/Booked_FSH__c.field-meta.xml
<CustomField>
    <fullName>Booked_FSH__c</fullName>
    <label>Booked FSH</label>
    <length>2</length>
    <type>Text</type>
</CustomField>