force-app/main/default/objects/Cycle_Day__c/fields/Booked_LH__c.field-meta.xml
<CustomField>
    <fullName>Booked_LH__c</fullName>
    <label>Booked LH</label>
    <length>2</length>
    <type>Text</type>
</CustomField>