force-app/main/default/objects/Cycle_Day__c/fields/Booked_P4__c.field-meta.xml
<CustomField>
    <fullName>Booked_P4__c</fullName>
    <label>Booked P4</label>
    <length>2</length>
    <type>Text</type>
</CustomField>