force-app/main/default/objects/Cycle_Day__c/fields/Cycle__c.field-meta.xml
<CustomField>
    <fullName>Cycle__c</fullName>
    <label>Cycle</label>
    <referenceTo>Cycle__c</referenceTo>
    <relationshipLabel>Cycle Days</relationshipLabel>
    <relationshipName>Cycle_Days</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>