force-app/main/default/objects/Cycle_Day__c/fields/Day_Date__c.field-meta.xml
<CustomField>
    <fullName>Day_Date__c</fullName>
    <formula>IF(ISBLANK(Day_Number__c)=TRUE, Prior_to_Day_1_Date__c ,Cycle__r.Day_1__c + Day_Number__c -1)</formula>
    <label>Day Date</label>
    <type>Date</type>
</CustomField>