force-app/main/default/objects/Cycle_Day__c/fields/Day_of_Week__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Week__c</fullName>
    <formula>CASE( MOD(  Day_Date__c  - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3,


&quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;No D1&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of Week</label>
    <type>Text</type>
</CustomField>