force-app/main/default/objects/Cycle_Day__c/fields/E2_Display__c.field-meta.xml
<CustomField>
    <fullName>E2_Display__c</fullName>
    <formula>IF(
    AND(
        ISBLANK(Booked_E2__c),
        ISBLANK(E2__c)
    ),
    &apos;&apos;,
    IF(
        NOT(ISBLANK(E2__c)),
        IF(E2__c = 0, Booked_E2__c, TEXT(E2__c)),
        Booked_E2__c
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>E2</label>
    <type>Text</type>
</CustomField>