force-app/main/default/objects/Cycle_Day__c/fields/FSH__c.field-meta.xml
<CustomField>
    <fullName>FSH__c</fullName>
    <label>FSH</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>