force-app/main/default/objects/Cycle_Day__c/fields/FSH_Display__c.field-meta.xml
<CustomField>
    <fullName>FSH_Display__c</fullName>
    <formula>IF(
    AND(
        ISBLANK(Booked_FSH__c),
        ISBLANK(FSH__c)
    ),
    &apos;&apos;,
    IF(
        NOT(ISBLANK(FSH__c)),
        IF(FSH__c = 0, Booked_FSH__c, TEXT(FSH__c)),
        Booked_FSH__c
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FSH</label>
    <type>Text</type>
</CustomField>