force-app/main/default/objects/Cycle_Day__c/fields/LH__c.field-meta.xml
<CustomField>
    <fullName>LH__c</fullName>
    <label>LH</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>