force-app/main/default/objects/Cycle_Day__c/fields/LH_Display__c.field-meta.xml
<CustomField>
    <fullName>LH_Display__c</fullName>
    <formula>IF(
    AND(
        ISBLANK(Booked_LH__c),
        ISBLANK(LH__c)
    ),
    &apos;&apos;,
    IF(
        NOT(ISBLANK(LH__c)),
        IF(LH__c = 0, Booked_LH__c, TEXT(LH__c)),
        Booked_LH__c
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LH</label>
    <type>Text</type>
</CustomField>