force-app/main/default/objects/Cycle_Day__c/fields/Medication_1__c.field-meta.xml
<CustomField>
    <fullName>Medication_1__c</fullName>
    <label>Medication 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>