force-app/main/default/objects/Cycle_Day__c/fields/Medication_2__c.field-meta.xml
<CustomField>
    <fullName>Medication_2__c</fullName>
    <label>Medication 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>