force-app/main/default/objects/Cycle_Day__c/fields/Medication_3__c.field-meta.xml
<CustomField>
    <fullName>Medication_3__c</fullName>
    <label>Medication 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>