force-app/main/default/objects/Cycle_Day__c/fields/Medication_4Plus__c.field-meta.xml
<CustomField>
    <fullName>Medication_4Plus__c</fullName>
    <label>Medication 5 (Depreciated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>