force-app/main/default/objects/Cycle_Day__c/fields/P4_Display__c.field-meta.xml
<CustomField>
    <fullName>P4_Display__c</fullName>
    <formula>IF(
    AND(
        ISBLANK(Booked_P4__c),
        ISBLANK(P4__c)
    ),
    &apos;&apos;,
    IF(
        NOT(ISBLANK(P4__c)),
        IF(P4__c = 0, Booked_P4__c, TEXT(P4__c)),
        Booked_P4__c
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P4</label>
    <type>Text</type>
</CustomField>