force-app/main/default/objects/Cycle_Day__c/fields/Prior_to_Day_1_Date__c.field-meta.xml
<CustomField>
    <fullName>Prior_to_Day_1_Date__c</fullName>
    <label>Prior to Day 1 Date</label>
    <type>Date</type>
</CustomField>