force-app/main/default/objects/Cycle_Day__c/fields/Right_Ov__c.field-meta.xml
<CustomField>
    <fullName>Right_Ov__c</fullName>
    <label>Right Ov</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>