force-app/main/default/objects/Cycle_Day__c/fields/Scan__c.field-meta.xml
<CustomField>
    <fullName>Scan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scan</label>
    <type>Checkbox</type>
</CustomField>