force-app/main/default/objects/Cycle_Day__c/fields/Scan_check_for_Med_Table__c.field-meta.xml
<CustomField>
    <fullName>Scan_check_for_Med_Table__c</fullName>
    <formula>IF(Scan__c = TRUE, &quot;X&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scan check for Med Table</label>
    <type>Text</type>
</CustomField>