force-app/main/default/objects/Cycle_Day__c/fields/Total_Fol_Right_mm__c.field-meta.xml
<CustomField>
    <fullName>Total_Fol_Right_mm__c</fullName>
    <label>Total Fol Right (mm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>